--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -19,6 +19,7 @@
                 <ul class="sidebar-nav">
                     {% if user.is_authenticated %}
                         <li>User: {{ user.get_username }}</li>
+                        <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
                         <a href="{% url 'logout' %}?next={{ request.path }}">Logout</a>
                         {% else %}
                         <a href="{% url 'login' %}?next={{ request.path }}">Login</a>
