added book form link in admin

--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -35,6 +35,7 @@
                         <li>Staff</li>
                         {% if perms.catalog.can_mark_returned %}
                             <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
+                            <li><a href="{% url 'book-create' %}">Add Book</a></li>
                         {% endif %}
                     </ul>
                 {% endif %}
