--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -36,6 +36,7 @@
                         {% if perms.catalog.can_mark_returned %}
                             <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
                             <li><a href="{% url 'book-create' %}">Add Book</a></li>
+{#                            <li><a href="{% url 'book-update' %}">Add Book</a></li>#}
                         {% endif %}
                     </ul>
                 {% endif %}
